JWT generating + storing + validation
Create bean DaoAuthenticationProvider, which is used for authentication
via email and password. Implement UserDetailsService that searches a user
with appropriate data in database.

In JwtRequestFilter JWT is now validated before it's putting in Security
context.

Implement authentication logic and create needed DTOs for login and registration.